fixed mobile overflow issue

--- a/src/components/styles/_app.css
+++ b/src/components/styles/_app.css
@@ -8,7 +8,3 @@
     --light-blue: #E1EBFB;
     --radius: 15px;
 }
-#root {
-    height: 100vh;
-
-}
